# ike

./: .gitignore  Cargo.toml  package-lock.json  package.json
assets/: Contacts.csv  Inventory.csv  Inventory.xlsx  Invoice.csv  Item.csv  Purchase_Order.csv  frequencies.xlsx
assets/dictionary-en/: index.dic
assets/revision/: Inventory.csv
assets/zoho/: Invoice.csv  Item.csv
examples/: api_hashtag.rs  api_init.rs  api_item_rename.rs  api_item_update.rs  api_items.rs  api_no_internet.rs  api_refresh_token.rs  api_set_count.rs  categories.rs  count.rs  deprecated_items.rs  export_items_2023.rs  frequency.rs  groups.rs  http_airline.rs  invoice_profit.rs  invoices.rs  items.rs  items_minus_cost.rs  items_minus_stock.rs  items_recent_sales.rs  items_sold_or_restocked.rs  items_sort_by_price.rs  last_sold.rs  milkshakes.rs  new_items.rs  ngrams.rs  pcs.rs  po.rs  po_filter.rs  profit.rs  rand.rs  sales.rs  tag.rs  tagged.rs  tags.rs  token.rs  typo.rs  untagged.rs  update_inventories.rs  (+3 more)
src/: error.rs  inventories.rs  invoices.rs  items.rs  lib.rs  loader.rs  main.rs  records.rs
src/api/: api.rs  client.rs  error.rs  mod.rs  token.rs
src/api/items/: item.rs  items.rs  mod.rs
src/groups/: group.rs  groups.rs  mod.rs
src/inventories/: error.rs  inventories.rs  inventory.rs  mod.rs
src/invoices/: .invoices.rs.pending-snap  invoice.rs  invoices.rs  mod.rs
src/items/: error.rs  item.rs  items.rs  mod.rs  tag.rs
src/purchase_orders/: mod.rs  purchase_order.rs  purchase_orders.rs
src/revision/: inventories.rs  mod.rs
src/zoho/: invoices.rs  items.rs  mod.rs
(+5 files in other folders)
