[package]
name = "shop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
csv = "1.2.1"
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
colored = "2.0.0"
ngrams = "1.0.1"
regex = "1.8.3"


[dev-dependencies]
insta = { version = "1.28.0", features = ["yaml"] }
