[package]
name = "shop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
csv = "1.2.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
colored = "2.0.0"
ngrams = "1.0.1"
regex = "1.8.3"
zspell = "0.3.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
online = "4.0.1"

[dev-dependencies]
insta = { version = "1.28.0", features = ["yaml"] }
